--- a/index2.html
+++ b/index2.html
@@ -4,6 +4,11 @@
 		<script src="rebound.min.js"></script>
 		<script src="code2.js"></script>
 		<style type="text/css">
+			* {
+				margin: 0;
+				padding: 0;
+			}
+
 			body, html {
 				width: 100%;
 				height: 100%;
