--- a/buttons/index.html
+++ b/buttons/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script src="rebound.min.js"></script>
+		<script src="../rebound.min.js"></script>
 		<script src="code.js"></script>
 		<style type="text/css">
 			.ball {
