--- a/chat-heads/index.html
+++ b/chat-heads/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script src="rebound.min.js"></script>
-		<script src="code2.js"></script>
+		<script src="../rebound.min.js"></script>
+		<script src="code.js"></script>
 		<style type="text/css">
 			* {
 				margin: 0;
